--- a/src/cpp_annotation/pyproject.toml
+++ b/src/cpp_annotation/pyproject.toml
@@ -5,7 +5,8 @@ description = ""
 authors = ["khalidzhang <khalidzhang@tencent.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.6"
+libclang = "^13.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
